# cs520-exercise3-llm-specification-generation

./: .coverage  README.md  pyproject.toml  report.md
agent/: agent.py  agent.yaml
bcbp15_has_spec_html/: class_index.html  function_index.html  index.html  status.json  z_234661f16aa99526___init___py.html  z_234661f16aa99526_solution_minimax_m2_free_15_py.html  z_234661f16aa99526_solution_minimax_m2_free_17_py.html
bcbp15_no_spec_html/: class_index.html  function_index.html  index.html  status.json  z_234661f16aa99526___init___py.html  z_234661f16aa99526_solution_minimax_m2_free_15_py.html  z_234661f16aa99526_solution_minimax_m2_free_17_py.html
bcbp17_has_spec_html/: class_index.html  function_index.html  index.html  status.json  z_234661f16aa99526_solution_minimax_m2_free_15_py.html  z_234661f16aa99526_solution_minimax_m2_free_17_py.html
bcbp17_no_spec_html/: class_index.html  function_index.html  index.html  status.json  z_234661f16aa99526___init___py.html  z_234661f16aa99526_solution_minimax_m2_free_15_py.html  z_234661f16aa99526_solution_minimax_m2_free_17_py.html
formal_specification/: problem_15_spec.txt  problem_15_spec_incorrect.txt  problem_17_spec.txt
problems_from_exercise2/: test_BigCodeBench_15.py  test_BigCodeBench_17.py
